# elrond-common

./: .gitignore  Arduino.mk  CMakeLists.txt  Config.mk  Headeronly.mk  Linux.mk  README.md  Test.mk  makefile  test.mk
common/: CMakeLists.txt  elrond_version.hpp.in
common/include/: elrond_common.hpp  elrond_common.ipp  elrond_common_types.hpp
common/include/enum/: ModuleType.hpp
common/include/interface/: Arguments.hpp  Console.hpp  Context.hpp  Module.hpp  Module.ipp  Parameters.hpp  Stream.hpp
common/include/module/: Abstract.hpp  Abstract.ipp  AbstractModule.hpp  AbstractModule.ipp  Base.hpp  Base.ipp  BaseGeneric.hpp  BaseGenericModule.hpp  BaseGenericModule.ipp
common/include/static/: bitwise.hpp  context.hpp  string.hpp
common_runtime/: CMakeLists.txt
common_runtime/include/: elrond_common_runtime.hpp  elrond_common_runtime_types.hpp
common_runtime/include/module/: HelloWorld.hpp
common_runtime/include/runtime/: BaseConsole.hpp  NullStream.hpp
common_runtime/src/: elrond_common_runtime.cpp
common_runtime/src/module/: HelloWorld.cpp
common_runtime/src/runtime/: NullStream.cpp
framework/: CMakeLists.txt
framework/common/: CMakeLists.txt
framework/common/include/: elrond_common.hpp  elrond_common.ipp  elrond_common_types.hpp
framework/platform_std/: CMakeLists.txt
framework/platform_std/include/: elrond.hpp  elrond.ipp  elrond_platform.hpp  elrond_platform_std.hpp  elrond_platform_std_external.ipp  elrond_platform_types.hpp
mock/: CMakeLists.txt
mock/include/: elrond_mock.hpp  elrond_mock_types.hpp
mock/include/mock/: Application.hpp  Arguments.hpp  Console.hpp  ConsoleAdapter.hpp  ModuleInstanceHandle.hpp  ModuleInstanceHandle.ipp  Parameters.hpp  RuntimeCtx.hpp  RuntimeCtx.ipp  StreamAdapter.hpp  StringStream.hpp
mock/src/mock/: Application.cpp  Arguments.cpp  Console.cpp  ConsoleAdapter.cpp  ModuleInstanceHandle.cpp  Parameters.cpp  RuntimeCtx.cpp  StreamAdapter.cpp  StringStream.cpp
platform_std/: CMakeLists.txt
platform_std/include/: elrond.hpp  elrond.ipp  elrond_platform.hpp  elrond_platform_std.hpp  elrond_platform_std_external.ipp  elrond_platform_types.hpp
platform_std/include/platform/: BaseFactory.hpp  BaseFactory.ipp  ConsoleStream.hpp  ConsoleStream.ipp  Factory.hpp  Factory.ipp  FactoryInterface.hpp  ModuleObject.hpp  ModuleObject.ipp  Object.hpp  Object.ipp  RuntimeCtx.hpp
platform_std/include/static/: bitwise.ipp  context.ipp  string.ipp
platform_std_runtime/: CMakeLists.txt
platform_std_runtime/include/: elrond_platform_runtime.hpp  elrond_platform_runtime_types.hpp
platform_std_runtime/include/interface/: ConsoleAdapter.hpp
platform_std_runtime/include/platform/: BaseFactoryAdapter.hpp  DlHandle.hpp  DlHandle.ipp  ExternalFactoryAdapter.hpp  InternalFactoryAdapter.hpp  InternalFactoryAdapter.ipp  ModuleInstance.hpp  OStream.hpp
platform_std_runtime/include/runtime/: Console.hpp  OStream.hpp
platform_std_runtime/src/: elrond_platform_runtime.cpp
platform_std_runtime/src/platform/: BaseFactoryAdapter.cpp  DlHandle.cpp  ExternalFactoryAdapter.cpp  ModuleInstance.cpp  OStream.cpp
platform_std_runtime/src/runtime/: Console.cpp  OStream.cpp
runtime/: CMakeLists.txt
runtime/common/: CMakeLists.txt
runtime/common/include/: elrond_common_runtime.hpp  elrond_common_runtime_types.hpp
runtime/include/: elrond_runtime.hpp
runtime/include/module/: HelloWorld.hpp
runtime/include/runtime/: BaseConsole.hpp
runtime/platform_std/: CMakeLists.txt
runtime/platform_std/include/: elrond_platform_runtime.hpp  elrond_platform_runtime_types.hpp
runtime/platform_std/src/: elrond_internal_module_factories.cpp  elrond_platform_runtime.cpp
runtime/src/module/: HelloWorld.cpp
src/: CMakeLists.txt  elrond.cpp
src/channel/: BaseChannelManager.cpp  BufferWrapper.cpp  RxChannel.cpp  TxChannel.cpp
src/gpio/: BaseGpioPin.cpp
src/input/: InputCallback.cpp
src/module/: AnalogLed.cpp  BaseGpioModule.cpp  BaseInputDriverModule.cpp  BaseModule.cpp  BaseTransportModule.cpp  ChannelToChannel.cpp  DigitalLed.cpp  Example.cpp  InputToChannel.cpp  Loopback.cpp  Servo.cpp
src/modules/: AnalogLed.cpp  BaseGpioModule.cpp  BaseInputDriverModule.cpp  BaseModule.cpp  BaseTransportModule.cpp  ChannelToChannel.cpp  DigitalLed.cpp  Example.cpp  ExampleModule.cpp  InputChannelModule.cpp  InputToChannel.cpp  Loopback.cpp  LoopbackTransportModule.cpp  Servo.cpp
src/runtime/: InputCallback.cpp  bitwise.cpp  math.cpp  time.cpp
src/test/: ChannelManagerTest.cpp  ConfigMap.cpp  DataLinkTest.cpp  DebugOut.cpp  DebugOutTest.cpp  ExternalModuleTest.cpp  GpioTest.cpp  InputDriverTest.cpp  InputListenerTest.cpp  RuntimeTest.cpp  RxChannelTest.cpp  TransportTest.cpp  TxChannelTest.cpp  runtime.cpp
test/: AnalogLed.test.cpp  CMakeLists.txt  ChannelManagerTest.test.cpp  ChannelToChannel.test.cpp  ConfigMap.test.cpp  ConfigMapTest.test.cpp  DebugOut.test.cpp  DebugOutTest.test.cpp  DigitalLed.test.cpp  ExternalMod.cpp  ExternalModule.cpp  GpioTest.test.cpp  HelloWorld.cpp  InputDriverTest.test.cpp  InputToChannel.test.cpp  Loopback.test.cpp  RuntimeTest.test.cpp  Servo.test.cpp  catch.cpp  catch2.cpp  catch2.hpp  dlobject.cpp  elrond-catch.hpp  elrond-test.hpp  runtime.test.cpp  version.test.cpp
test/dlobject/: CMakeLists.txt  ExternalModule.cpp  dlobject.cpp
test/elrond-test/: ChannelManagerTest.cpp  ChannelManagerTest.hpp  ConfigMap.cpp  DebugOut.cpp  DebugOut.hpp  GpioTest.cpp  GpioTest.hpp  InputDriverTest.cpp  InputDriverTest.hpp  RuntimeTest.cpp  RuntimeTest.hpp  TransportTest.cpp  TransportTest.hpp  runtime.cpp
test/misc/: HelloWorld.cpp
test/mock/: Arguments.test.cpp  Console.test.cpp  ConsoleAdapter.test.cpp  ModuleInstanceHandle.test.cpp  Parameters.test.cpp  RuntimeCtx.test.cpp  StreamAdapter.test.cpp  StringStream.test.cpp
test/platform/: DLHandle.test.cpp  Factory.test.cpp  FactoryAdapter.test.cpp  elrond_platform_runtime.test.cpp
test/runtime/: Console.test.cpp  NullArguments.test.cpp  OStream.test.cpp
test/static/: bitwise.test.cpp  string.test.cpp  timespan.test.cpp  version.test.cpp
(+198 files in other folders)
